[tool.poetry]
name = "zipcin"
version = "0.1.0"
description = ""
authors = ["ravigoel08 <ravigoel.1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.3.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
twine = "^3.2.0"

[build-system]
requires = ["setuptools","poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
