[tool.poetry]
name = "pyzipcin"
version = "0.2.2"
description = ""
authors = ["ravigoel08 <ravigoel.1997@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.3.22"

[tool.poetry.dev-dependencies]
twine = "^3.2.0"
check-manifest = "^0.45"

[build-system]
requires = ["setuptools","poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
